--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.14.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
